css/apposite-e4d7ce.webflow.css
/* ... */
.paragraph-6 {
  text-align: center;
  padding-left: 8px;
  padding-right: 8px;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
}

.div-block-10 {
  padding-top: 10px;
}

.image-4 {
  object-fit: cover;
}

.div-block-11 {
  z-index: 9999;
  background-color: #252525;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
}

.appositesupport {
  flex-direction: row;
  flex: 1;
  justify-content: flex-start;
  align-self: flex-start;
  align-items: flex-start;
  height: 100%;
  margin-bottom: 0;
  display: flex;
}

.div-block-12 {
  background-color: #505050;
  width: 100%;
  height: 100%;
  display: flex;
  position: fixed;
}

.video {
  object-fit: fill;
  max-width: 940px;
}

.div-block-13 {
  z-index: 999;
  color: #5f5f5f;
  background-color: #b4b4b4;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  display: flex;
  position: fixed;
}

.image-5 {
  object-fit: contain;
}

.div-block-14 {
  max-width: 940px;
  display: flex;
}

.heading-8 {
  color: #000;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  line-height: 38px;
  text-decoration: none;
}

.div-block-15 {
  color: rgba(77, 77, 77, 0);
  flex-direction: column;
  justify-content: flex-end;
  min-width: 940px;
  display: flex;
}

.div-block-16 {
  align-self: flex-start;
}

.link-block-2 {
  text-decoration: none;
}

.link-block-5 {
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  display: flex;
}

.image-6 {
  border-radius: 24px;
}

.div-block-17 {
  background-image: url('../images/vibescapeEmpty.jpg');
  background-position: 0 0;
  background-size: cover;
  padding-top: 40px;
}

.div-block-18 {
  background-image: url('../images/vibescapeEmptyMasked2.png');
  background-position: 0 0;
  background-size: cover;
  height: 400px;
  margin-top: 40px;
  padding-top: 20px;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
}

.grid {
  grid-template-rows: 382px auto;
  min-height: 24%;
}

.heading-9 {
  color: #fff;
  text-align: left;
  margin-bottom: 0;
  font-weight: 100;
}

.heading-10 {
  color: #ddd;
  text-align: left;
  margin-top: 0;
  font-size: 16px;
  font-weight: 400;
}

.image-7 {
  margin-left: 20px;
}

.div-block-19 {
  position: relative;
}

.body-2 {
  background-color: #0a0a0a;
}

.appositegridsubpage-copy {
  flex: 1;
  grid-template: "Area"
                 "."
                 "."
                 / 1fr 1fr 1fr 1fr;
}

.heading-11 {
  color: #fff;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  font-weight: 100;
}

.heading-12 {
  color: #fff;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  font-weight: 500;
}

.heading-13 {
  color: #fff;
  text-align: center;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  font-weight: 300;
}

.heading-14 {
  color: var(--white);
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  font-weight: 400;
}

.heading-6-copy {
  color: #fff;
  text-align: center;
  letter-spacing: -1px;
  max-width: 600px;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  font-size: 48px;
  font-weight: 400;
  line-height: 48px;
}

.paragraph-4-copy {
  color: #999;
  text-align: center;
  text-align: center;
  max-width: 600px;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  font-weight: 500;
}

.div-block-20 {
  padding-left: 40px;
}

.appositeheading-copy {
  color: #fff;
  flex-direction: row;
  margin-top: 0;
  margin-bottom: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  font-size: 24px;
  font-weight: 500;
  text-decoration: none;
  display: flex;
}

.link-copy {
  color: #fff;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  text-decoration: none;
}

.appositeheading-copy-copy {
  color: #000;
  flex-direction: row;
  margin-top: 0;
  margin-bottom: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  font-size: 24px;
  font-weight: 500;
  text-decoration: none;
  display: flex;
}

.image-copy {
  aspect-ratio: auto;
  object-fit: cover;
  padding-top: 20px;
  display: inline-block;
  position: static;
}

.background-video {
  width: 100%;
  height: 100%;
  min-height: 400px;
  display: block;
  position: relative;
}

.heading-9-copy {
  color: #070707;
  text-align: left;
  margin-bottom: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Oxygen, Fira Sans, Droid Sans, sans-serif;
  font-weight: 400;
}

.heading-10-copy {
  color: #313131;
  text-align: left;
  margin-top: 0;
  font-size: 16px;
  font-weight: 400;
}

.section {
  display: block;
}
/* ... */

